--- a/.travis.yml
+++ b/.travis.yml
@@ -6,29 +6,29 @@ services:
   - docker
 
 before_install:
-  - docker build -t johnahn/react-test-app -f ./frontend/Dockerfile.dev ./frontend
+  - docker build -t devconnor/react-test-app -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-  - docker run -e CI=true johnahn/react-test-app npm test
+  - docker run -e CI=true devconnor/react-test-app npm test
 
 after_success:
-  - docker build -t johnahn/docker-frontend ./frontend
-  - docker build -t johnahn/docker-backend ./backend
-  - docker build -t johnahn/docker-nginx ./nginx
+  - docker build -t devconnor/docker-frontend ./frontend
+  - docker build -t devconnor/docker-backend ./backend
+  - docker build -t devconnor/docker-nginx ./nginx
 
   - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
 
-  - docker push johnahn/docker-frontend
-  - docker push johnahn/docker-backend
-  - docker push johnahn/docker-nginx
+  - docker push devconnor/docker-frontend
+  - docker push devconnor/docker-backend
+  - docker push devconnor/docker-nginx
 
 deploy:
   provider: elasticbeanstalk
   region: "ap-northeast-2"
-  app: "docker-fullstack-app"
-  env: "DockerFullstackApp-env"
-  bucket_name: elasticbeanstalk-ap-northeast-2-972153559337
-  bucket_path: "docker-fullstack-app"
+  app: "docker-full-stack"
+  env: "Dockerfullstack-env"
+  bucket_name: elasticbeanstalk-ap-northeast-2-615258856034
+  bucket_path: "docker-full-stack"
   on:
     branch: main
   
