--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   frontend:
-    image: johnahn/docker-frontend
+    image: devconnor/docker-frontend
     volumes:
       - /app/node_modules
       - ./frontend:/app
@@ -10,23 +10,23 @@ services:
 
   nginx: 
     restart: always
-    image: johnahn/docker-nginx
+    image: devconnor/docker-nginx
     ports: 
       - "80:80"
 
   backend:
-    image: johnahn/docker-backend
+    image: devconnor/docker-backend
     container_name: app_backend
     volumes:
       - /app/node_modules
       - ./backend:/app
     mem_limit: 128m
     environment: 
-      MYSQL_HOST: $MYSQL_HOST 
-      MYSQL_USER: $MYSQL_USER 
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-      MYSQL_DATABASE: $MYSQL_DATABASE
-      MYSQL_PORT: $MYSQL_PORT   
+      MYSQL_HOST: docker-fullstack-mysql.cjix2ohrkuio.ap-northeast-2.rds.amazonaws.com 
+      MYSQL_USER: root 
+      MYSQL_ROOT_PASSWORD: johnahn777
+      MYSQL_DATABASE: myapp
+      MYSQL_PORT: 3306   
 
   # mysql:
   #   build: ./mysql
